# Taskify

./: .gitignore  taskify-back.code-workspace
Docker/: docker-compose.test.yaml
taskify-back/: Dockerfile  pyproject.toml  requirements.txt
taskify-back/src/: alembic.ini
taskify-back/src/migrations/: env.py
taskify-back/src/migrations/versions/: 6a8ff75fdda9_default_role_and_permissions.py  9dd2881a3d64_init.py
taskify-back/src/taskify/: config.py  main.py
taskify-back/src/taskify/api/: __init__.py  deps.py
taskify-back/src/taskify/api/v1/: __init__.py  auth.py  boards.py  cards.py  lists.py  oauth.py  storage.py  users.py
taskify-back/src/taskify/core/: __init__.py  asgi.py  db.py  exception.py
taskify-back/src/taskify/models/: auth.py  base.py  board.py  oauth.py
taskify-back/src/taskify/repositories/: auth.py  base.py  board.py  card.py  list.py  oauth.py
taskify-back/src/taskify/schemas/: auth.py  base.py  board.py  cards.py  filters.py  lists.py  rbac.py  storage.py  user.py
taskify-back/src/taskify/services/: auth.py  base.py  boards.py  cards.py  lists.py  storage.py  users.py
taskify-back/src/taskify/utils/: cbv.py  permissions.py
taskify-front/: Dockerfile  app.config.ts  nuxt.config.ts  package.json
taskify-front/assets/: openapi.json
taskify-front/composables/: boardPermission.ts  useWelcome.ts
taskify-front/layouts/: auth.vue  default.vue  simple.vue
taskify-front/middleware/: auth.global.ts
taskify-front/pages/: index.vue
taskify-front/stores/: authStore.ts  boardStore.ts  joinedBoards.ts
(+50 files in other folders)
