[project]
name = "taskify-back"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladyslav Chaliuk",email = "chaliukvladyslav@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "fastapi-pagination (>=0.13.0,<0.14.0)",
    "fastapi-filter (>=2.0.1,<3.0.0)",
    "pwdlib[argon2,bcrypt] (>=0.2.1,<0.3.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "makefun (>=1.15.6,<2.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "httpx-oauth (>=0.16.1,<0.17.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "aioboto3 (>=14.1.0,<15.0.0)",
]

[tool.poetry]
packages = [{include = "taskify", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
